small config.yml changes

--- a/PerlDance/config.yml
+++ b/PerlDance/config.yml
@@ -2,6 +2,10 @@
 # env-related settings should go to environments/$env.yml.
 # All the settings in this file will be loaded at Dancer's startup.
 
+server_tokens: 0;
+require_environment: 1
+session_name: perldance.session
+
 # Your application's name
 appname: "PerlDance"
 
