small update to nginx example

--- a/PerlDance/examples/nginx.cfg
+++ b/PerlDance/examples/nginx.cfg
@@ -16,6 +16,6 @@ server {
   add_header X-Frame-Options "deny";
   add_header X-XSS-Protection "1;mode=block";
   add_header X-Content-Type-Options "nosniff";
-  add_header Content-Security-Policy "connect-src 'self' maxcdn.bootstrapcdn.com google.com *.google.com *.googleapis.com *.googleapis.com *.gstatic.com; script-src 'self' maxcdn.bootstrapcdn.com code.jquery.com *.googleapis.com google.com *.gstatic.com *.googleapis.com *.google.com 'unsafe-eval'; font-src 'self' fonts.googleapis.com fonts.gstatic.com";
+  add_header Content-Security-Policy "connect-src 'self' maxcdn.bootstrapcdn.com google.com *.google.com *.googleapis.com *.googleapis.com *.gstatic.com; script-src 'self' maxcdn.bootstrapcdn.com code.jquery.com *.googleapis.com google.com *.gstatic.com *.googleapis.com *.google.com 'unsafe-eval'; font-src 'self' fonts.googleapis.com fonts.gstatic.com maxcdn.bootstrapcdn.com";
   more_set_headers 'Server: Teapot v12.16.1773';
 }
