make email from more friendly

--- a/PerlDance/config.yml
+++ b/PerlDance/config.yml
@@ -87,7 +87,7 @@ plugins:
   Email:
     headers:
       sender: "2015@perl.dance"
-      from: "2015@perl.dance"
+      from: "Perl Dancer 2015 <2015@perl.dance>"
       X-Mailer: "PerlDance2015 1.0"
   Interchange6::Routes:
     navigation:
