new talks page act-style with tag cloud
- old talks page is now /schedule
- fix type in populate
- css additions to support tag cloud
- data filter changed to allow empty

--- a/PerlDance/config.yml
+++ b/PerlDance/config.yml
@@ -31,6 +31,12 @@ engines:
       currency:
         options:
           int_curr_symbol: "€"
+      date:
+        class: "Template::Flute::Filter::Date"
+        options:
+          format: '%x %R'
+          strict:
+            empty: 0
       date_only:
         class: "Template::Flute::Filter::Date"
         options:
