Display "not yet scheduled" for talks without start_time.

--- a/PerlDance/config.yml
+++ b/PerlDance/config.yml
@@ -35,8 +35,8 @@ engines:
         class: "Template::Flute::Filter::Date"
         options:
           format: '%x %R'
-          strict:
-            empty: 0
+          date_text:
+            empty: "Not yet scheduled"
       date_only:
         class: "Template::Flute::Filter::Date"
         options:
