--- a/config.yml
+++ b/config.yml
@@ -35,8 +35,8 @@ engines:
         class: "Template::Flute::Filter::Date"
         options:
           format: '%x %R'
-          date_text:
-            empty: "Not yet scheduled"
+          strict:
+            empty: 0
       date_only:
         class: "Template::Flute::Filter::Date"
         options:
