news crud methods and templates working but NO validation in place

--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,8 @@ template: "template_flute"
 engines:
   template_flute:
     filters:
+      boolean:
+        class: "PerlDance::Filter::Boolean"
       currency:
         options:
           int_curr_symbol: "€"
