add unsafe option to Markdown filter which prevents scrubbing

--- a/config.yml
+++ b/config.yml
@@ -50,6 +50,10 @@ engines:
             empty: 0
       markdown:
         class: "PerlDance::Filter::Markdown"
+      markdown_unsafe:
+        class: "PerlDance::Filter::Markdown"
+        options:
+          unsafe: 1
       time_only:
         class: "Template::Flute::Filter::Date"
         options:
