--- a/config.yml
+++ b/config.yml
@@ -34,6 +34,8 @@ logger_format: "%t [%P] %L @%D> %m in %f l. %l"
 template: "template_flute"
 
 engines:
+  JSON:
+    allow_blessed: '1'
   template_flute:
     filters:
       boolean:
