Created /paypal/cancel with flash + redirect to cart.
To use it, a change to the environment file is required.

See stub in config.yml

--- a/config.yml
+++ b/config.yml
@@ -118,3 +118,14 @@ plugins:
       login:
         template: sign-in
 checkout_type: multi
+
+# placeholder
+paypal:
+  id: myid
+  password: XXX
+  signature: XXXXXX
+  returnurl: "https://www.perl.dance/paypal/getrequest"
+  cancelurl: "https://www.perl.dance/paypal/cancel"
+  currencycode: EUR
+  sandbox: 1
+  maintenance: 0
