--- a/config.yml
+++ b/config.yml
@@ -365,7 +365,7 @@ surveys:
               - No preference
           -
             title: 'Are there any topics you would specifically like to see featured?'
-            other: 'Please enter you suggestions here:'
+            other: 'Please enter you suggestions here'
           -
             title: 'How do you rate the Conference?'
             text: 'How would you rate your overall satisfaction of the following areas of the conference?'
